# snake-fmri

./: .buildinfo  .gitignore  FAQ.html  LICENSE.txt  README.md  api.html  citation.html  genindex.html  index.html  lazy.py  models.html  objects.inv  py-modindex.html  pyproject.toml  related-projects.html  search.html  searchindex.js  sim-framework.html  snake-vs-other.html
.doctrees/: api.doctree  environment.pickle  index.doctree  models.doctree
.doctrees/_autosummary/: simfmri.doctree  simfmri.glm.append_stats_df.doctree  simfmri.glm.compute_confusion.doctree  simfmri.glm.compute_stats.doctree  simfmri.glm.compute_test.doctree  simfmri.glm.doctree  simfmri.metric.doctree  simfmri.metric.get_ptsnr.doctree  simfmri.metric.get_signal_noise.doctree  simfmri.metric.get_snr.doctree  simfmri.metric.get_snr_axis.doctree  simfmri.metric.get_tsnr.doctree  simfmri.reconstructor.BenchmarkReconstructor.doctree  simfmri.reconstructor.LowRankPlusSParseReconstructor.doctree  simfmri.reconstructor.SequentialReconstructor.doctree  simfmri.reconstructor.ZeroFilledOptimalThreshReconstructor.doctree  simfmri.reconstructor.ZeroFilledReconstructor.doctree  simfmri.reconstructor.doctree  simfmri.reconstructor.get_fourier_operator.doctree  simfmri.simulator.doctree  simfmri.simulator.factory.SimulationDataFactory.doctree  simfmri.simulator.factory.doctree  simfmri.simulator.handlers.acquisition.AcquisitionHandler.doctree  simfmri.simulator.handlers.acquisition.doctree  simfmri.simulator.handlers.activation.ActivationHandler.doctree  simfmri.simulator.handlers.activation.doctree  simfmri.simulator.handlers.base.AbstractHandler.doctree  simfmri.simulator.handlers.base.doctree  simfmri.simulator.handlers.doctree  simfmri.simulator.handlers.loader.LoadDataHandler.doctree  simfmri.simulator.handlers.loader.SaveDataHandler.doctree  simfmri.simulator.handlers.loader.doctree  simfmri.simulator.handlers.noise.NoiseHandler.doctree  (+49 more)
_api/: modules.html  simfmri._version.html  simfmri.cli.eval_recon.html  simfmri.cli.generate_dataset.html  simfmri.cli.html  simfmri.cli.main.html  simfmri.conf.html  simfmri.handlers.acquisition._coils.html  simfmri.handlers.acquisition.base.html  simfmri.handlers.acquisition.cartesian_sampling.html  simfmri.handlers.acquisition.html  simfmri.handlers.acquisition.trajectory.html  simfmri.handlers.acquisition.workers.html  simfmri.handlers.activation._block.html  simfmri.handlers.activation.activation.html  simfmri.handlers.activation.html  simfmri.handlers.base.html  simfmri.handlers.html  simfmri.handlers.loader.html  simfmri.handlers.noise.html  simfmri.handlers.phantom._big.html  simfmri.handlers.phantom._brainweb.html  simfmri.handlers.phantom._shepp_logan.html  simfmri.handlers.phantom.html  simfmri.handlers.phantom.phantom.html  simfmri.html  simfmri.runner.factory.html  simfmri.runner.html  simfmri.runner.reconstructor.html  simfmri.runner.sweeper.html  simfmri.runner.utils.html  simfmri.simulation.html  simfmri.simulation.lazy.html  simfmri.simulation.simulation.html  simfmri.utils.html  simfmri.utils.typing.html  simfmri.utils.utils.html
_autosummary/: simfmri.glm.append_stats_df.html  simfmri.glm.compute_confusion.html  simfmri.glm.compute_stats.html  simfmri.glm.compute_test.html  simfmri.glm.html  simfmri.html  simfmri.metric.get_ptsnr.html  simfmri.metric.get_signal_noise.html  simfmri.metric.get_snr.html  simfmri.metric.get_snr_axis.html  simfmri.metric.get_tsnr.html  simfmri.metric.html  simfmri.reconstructor.BenchmarkReconstructor.html  simfmri.reconstructor.LowRankPlusSParseReconstructor.html  simfmri.reconstructor.SequentialReconstructor.html  simfmri.reconstructor.ZeroFilledOptimalThreshReconstructor.html  simfmri.reconstructor.ZeroFilledReconstructor.html  simfmri.reconstructor.get_fourier_operator.html  simfmri.reconstructor.html  simfmri.simulator.factory.SimulationDataFactory.html  simfmri.simulator.factory.html  simfmri.simulator.handlers.acquisition.AcquisitionHandler.html  simfmri.simulator.handlers.acquisition.html  simfmri.simulator.handlers.activation.ActivationHandler.html  simfmri.simulator.handlers.activation.html  simfmri.simulator.handlers.base.AbstractHandler.html  simfmri.simulator.handlers.base.html  simfmri.simulator.handlers.html  simfmri.simulator.handlers.loader.LoadDataHandler.html  simfmri.simulator.handlers.loader.SaveDataHandler.html  simfmri.simulator.handlers.loader.html  simfmri.simulator.handlers.noise.GaussianNoiseHandler.html  simfmri.simulator.handlers.noise.KspaceNoiseHandler.html  simfmri.simulator.handlers.noise.NoiseHandler.html  simfmri.simulator.handlers.noise.RicianNoiseHandler.html  simfmri.simulator.handlers.noise.html  simfmri.simulator.handlers.phantom.BigPhantomGeneratorHandler.html  simfmri.simulator.handlers.phantom.RoiDefinerHandler.html  simfmri.simulator.handlers.phantom.SheppLoganGeneratorHandler.html  simfmri.simulator.handlers.phantom.SlicerHandler.html  (+42 more)
_modules/: index.html
_sources/: citation.md  index.md  index.rst.txt  related-projects.md  snake-vs-other.md
_static/: documentation_options.js
auto_examples/: example_shepp_logan.html  index.html  sg_execution_times.html
docs/: FAQ.md  _config.yml  _toc.yml  api-handlers.md  api-simulator.md  api.rst  build_docs.sh  conf.py  extend-snake.md  getting_started.md  how-does-it-works.md  index.md  index.rst  intro.md  models.rst  mrd-simulation.md  references.bib  requirements.txt  sim-framework.md
examples/: GALLERY_HEADER.rst  README.md  README.rst  __init__.py  conftest.py  example_EPI_2D.py  example_T2s_EPI.py  example_anat_EPI.py  example_anat_spirals.py  example_big.py  example_generate_phantom.py  example_gpu_anat_spirals.py  example_gpu_anat_spirals_slice.py  example_shepp_logan.py  example_simulation_with_factory.py  example_vds_simrec.py
examples_gpu/: example_anat_spirals.py
scripts/: create_sim.py  results.py
tests/: __init__.py  test_acquisition.py  test_cli.py  test_cli_utils.py  test_handlers.py  test_phantom.py  test_sim_config.py  test_simulation.py  test_snake.py  test_transform.py  test_utils.py
user_guide/: installation.html
(+552 files in other folders)
